--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "topicmodels"
+name = "poisson-topicmodels"
 version = "0.1.0"
-description = "Probabilistic topic modeling with Bayesian inference using JAX and NumPyro"
+description = "Poisson topic modeling with Bayesian inference using JAX and NumPyro"
 authors = [
     {name = "Bernd Prostmaier", email = "b.prostmaier@icloud.com"},
     {name = "Bettina Grün"},
