--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,17 +22,17 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 dependencies = [
-    "jax==0.4.35",
-    "jaxlib==0.4.35",
-    "numpyro==0.15.3",
-    "optax==0.2.4",
+    "jax==0.8.0",
+    "jaxlib==0.8.0",
+    "numpyro==0.19.0",
+    "optax==0.2.6",
     "numpy>=2.2.0,<3.0.0",
     "scipy>=1.15.0,<2.0.0",
     "pandas>=2.2.0,<3.0.0",
     "scikit-learn>=1.6.0,<2.0.0",
     "matplotlib>=3.10.0,<4.0.0",
     "tqdm>=4.66.0,<5.0.0",
-    "flax>=0.8.0,<0.9.0",
+    "flax>=0.12.0",
     "gensim>=4.3.0,<5.0.0"
 ]
 
