--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "matplotlib>=3.10.0,<4.0.0",
     "tqdm>=4.66.0,<5.0.0",
     "flax>=0.12.0",
-    "gensim>=4.3.0,<5.0.0"
+    "gensim>=4.3.0,<5.0.0",
+    "pytest (>=9.0.1,<10.0.0)"
 ]
 
 [project.optional-dependencies]
