--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,10 @@ dependencies = [
     "tqdm>=4.66.0,<5.0.0",
     "flax>=0.12.0",
     "gensim>=4.3.0,<5.0.0",
+    "wordcloud>=1.9.0,<2.0.0",
     "pytest (>=9.0.1,<10.0.0)",
-    "pre-commit (>=4.5.0,<5.0.0)"
+    "pre-commit (>=4.5.0,<5.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)"
 ]
 
 [project.optional-dependencies]
