--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,20 +35,19 @@ dependencies = [
     "flax>=0.12.0",
     "gensim>=4.3.0,<5.0.0",
     "wordcloud>=1.9.0,<2.0.0",
-    "pytest (>=9.0.1,<10.0.0)",
-    "pre-commit (>=4.5.0,<5.0.0)",
-    "seaborn (>=0.13.2,<0.14.0)"
+    "seaborn>=0.13.2,<0.14.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0",
+    "pytest>=9.0.1,<10.0.0",
     "pytest-cov>=4.0",
     "black>=23.0",
     "isort>=5.12",
     "mypy>=1.0",
     "pylint>=2.17",
     "flake8>=6.0",
+    "pre-commit>=4.5.0,<5.0.0",
 ]
 docs = [
     "sphinx>=6.0",
